# bot-dev-container

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: analysis.ipynb  main.py  mongo.py
